# VK_test

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 20260330_0001_create_users_table.py
app/: __init__.py  main.py
app/api/: deps.py
app/api/v1/: router.py
app/api/v1/endpoints/: auth.py  health.py  users.py
app/core/: __init__.py  config.py  exceptions.py  security.py
app/db/: __init__.py  base.py  session.py
app/models/: __init__.py  user.py
app/repositories/: user_repository.py
app/schemas/: auth.py  user.py
app/services/: user_service.py
helm/botfarm/: Chart.yaml  values.yaml
helm/botfarm/templates/: _helpers.tpl  configmap.yaml  deployment.yaml  postgres-deployment.yaml  postgres-pvc.yaml  postgres-service.yaml  secret.yaml  service.yaml
scripts/: entrypoint.sh
tests/: conftest.py
tests/concurrency/: test_lock_user_concurrency.py
tests/integration/: test_auth_api.py  test_health_api.py  test_users_api.py
tests/unit/: test_security.py  test_user_service.py
